# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: __init__.py  build_diff.py  cli.py  factory.py  gendiff.py  parsers.py
gendiff/format/: __init__.py  json.py  plain.py  text.py
gendiff/formatters/: json.py  plain.py  text.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: after.json  after.yaml  after_test.json  correct_answer  correct_answer1  correct_answer_json_1  correct_answer_plain_1
